--- a/FaPA/GUI/Design/Templates/DatiGenerali.xaml
+++ b/FaPA/GUI/Design/Templates/DatiGenerali.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
-             xmlns:utils="clr-namespace:FaPA.GUI.Utils">
+             xmlns:utils="clr-namespace:FaPA.GUI.Utils"
+             xmlns:system="clr-namespace:System;assembly=mscorlib">
     
     <Grid Margin="2,2,2,2" MaxWidth="950">
         <Grid.RowDefinitions>
@@ -530,16 +531,21 @@
                                             </DataGridTemplateColumn.CellEditingTemplate>
                                         </DataGridTemplateColumn>
 
-                                        <DataGridTextColumn Header="Riferimento numero linee" Width="*" 
-                                                            
-                                                            Binding="{Binding RiferimentoNumeroLinea, 
-                                                                              Converter={StaticResource StringArrayConverter},
-                                                                              ValidatesOnDataErrors =True,
-                                                                                NotifyOnSourceUpdated=True,
-                                                                                NotifyOnValidationError=True,
-                                                                                UpdateSourceTrigger =LostFocus}"
+                                        <DataGridTextColumn Header="Riferimento numero linee" Width="*"
+
                                                             ElementStyle="{StaticResource errorStyle}">
 
+                                            <DataGridTextColumn.Binding>
+                                                <Binding Path="RiferimentoNumeroLinea" Converter="{StaticResource StringArrayConverter}"
+                                                         ValidatesOnDataErrors="True" NotifyOnSourceUpdated="True" NotifyOnValidationError="True"
+                                                         UpdateSourceTrigger="LostFocus">
+                                                    <Binding.ConverterParameter>
+                                                        <x:Array Type="system:Char">
+                                                            <system:Char >,</system:Char>
+                                                        </x:Array>
+                                                    </Binding.ConverterParameter>
+                                                </Binding> 
+                                            </DataGridTextColumn.Binding>
                                             <DataGridTextColumn.CellStyle>
                                                 <Style TargetType="DataGridCell" BasedOn="{StaticResource {x:Type DataGridCell}}">
                                                     <Setter Property="ToolTip" Value="Separare i numeri di linea dettaglio da una virgola. Lasciare vuoto se riferito a tutta la fattura" />
