--- a/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
+++ b/FaPA/GUI/Design/Templates/AltriDatiGrid.xaml
@@ -1,9 +1,8 @@
-﻿<controls:BaseListViewControl x:Class="FaPA.GUI.Design.Templates.AltriDatiGrid"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.AltriDatiGrid"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:FaPA.GUI.Controls"
         xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
         mc:Ignorable="d">
     <Grid >
@@ -110,4 +109,4 @@
                                     PerformCancelCommand="{Binding PerformCancel}"/>
     </Grid>
 
-</controls:BaseListViewControl>
+</UserControl>
