--- a/FaPA/GUI/Design/Templates/FatturaGrid.xaml
+++ b/FaPA/GUI/Design/Templates/FatturaGrid.xaml
@@ -1,11 +1,9 @@
-﻿<controls:BaseListViewControl
-    x:Class="FaPA.GUI.Design.Templates.FatturaGrid"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.FatturaGrid"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:controls="clr-namespace:FaPA.GUI.Controls"
         xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" MaxHeight="600"
         mc:Ignorable="d">
@@ -22,7 +20,8 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <DockPanel x:Name="emptyMessage" Grid.Row="0">
+        <DockPanel  Grid.Row="0"
+                     Visibility="{Binding Path=UserEntitiesView.IsEmpty, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
 
             <TextBlock HorizontalAlignment="Center"
                        VerticalAlignment="Center"
@@ -37,8 +36,11 @@
 
         </DockPanel>
 
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Focusable="False" Grid.Row="1">
-            <DataGrid x:Name="FattureGridControl" Visibility="Hidden" HorizontalContentAlignment="Stretch"
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Focusable="False" Grid.Row="1"
+                      Visibility="{Binding Path=UserEntitiesView.IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+            <DataGrid x:Name="FattureGridControl" 
+                      ItemsSource="{Binding UserEntitiesView}"
+                      HorizontalContentAlignment="Stretch"
                         IsSynchronizedWithCurrentItem="True" HorizontalScrollBarVisibility="Auto" 
                         VerticalScrollBarVisibility="Auto" SelectionMode="Extended"
                         CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"
@@ -149,8 +151,8 @@
             </DataGrid>
         </ScrollViewer>
 
-        <DockPanel Grid.Row="2">
-            <Expander Header="Filtra/Raggruppa" Margin="4" Visibility="{Binding ElementName=FattureGridControl, Path=Visibility}">
+        <DockPanel Grid.Row="2" Visibility="{Binding Path=UserEntitiesView.IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}">
+            <Expander Header="Filtra/Raggruppa" Margin="4" >
                 <StackPanel Orientation="Horizontal">
                     <GroupBox Header="Filtra">
                         <StackPanel Orientation="Horizontal" >
@@ -175,33 +177,31 @@
 
         </DockPanel>
 
-        <DockPanel Width="Auto" Grid.Row="3" Height="25"  Visibility="Collapsed" x:Name="recordsToolBar" 
+        <DockPanel Width="Auto" Grid.Row="3" Height="25"  
+                   Visibility="{Binding Path=UserEntitiesView.IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}"
                    Margin="0 05 0 0" Background="{StaticResource Brush_ToolBar}">
 
             <Button Name="CreateNew" 
                     Command="{Binding Presenter.OnGridEmptyCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-                    ToolTip="Crea una nuova oggetto">
+                    ToolTip="Crea una nuova fattura">
 
-                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png"
-                       
-                       Width="32"/>
+                <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png" Width="32"/>
             </Button>
 
             <Button Name="OpenEditingTab" 
                     Command="{Binding Presenter.ApriSchedaDettalio, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
-                    ToolTip="Apre la scheda dettaglio oggetto" 
+                    ToolTip="Apre la scheda dettaglio fattura" 
                     Width="25">
 
-                <Image Source="\GUI\Design\Styles\Images\find(2).png"
-                       Width="Auto"/>
+                <Image Source="\GUI\Design\Styles\Images\find(2).png" Width="Auto"/>
             </Button>
 
-            <myRecordNavigator:MyRecordNavigator x:Name="recordsNavigationToolBar"
-                                                 ItemsSource="{Binding GridItemSource}"
+            <myRecordNavigator:MyRecordNavigator ItemsSource="{Binding UserEntitiesView}"
                                                  GridSource="{Binding ElementName=FattureGridControl}"
+                                                 Visibility="{Binding Path=UserEntitiesView.IsEmpty, Mode=OneWay, Converter={StaticResource BoolToOppositeVisibilityConverter}}"
                                                  Height="25"/>
         </DockPanel>
 
     </Grid>
     
-</controls:BaseListViewControl>
+</UserControl>
