--- a/FaPA/GUI/Design/Templates/ScontoMaggiorazione.xaml
+++ b/FaPA/GUI/Design/Templates/ScontoMaggiorazione.xaml
@@ -1,10 +1,9 @@
-﻿<controls:BaseListViewControl x:Class="FaPA.GUI.Design.Templates.ScontoMaggiorazione"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.ScontoMaggiorazione"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:FaPA.GUI.Controls"
-                              xmlns:enums="clr-namespace:FaPA.Core.FaPa"
+        xmlns:enums="clr-namespace:FaPA.Core.FaPa"
         xmlns:t="clr-namespace:FaPA.GUI.Design.Templates"
         xmlns:utils="clr-namespace:FaPA.Infrastructure.Utils"
         mc:Ignorable="d">
@@ -120,4 +119,4 @@
                                     AddItemCommand="{Binding AddItemCommand}"/>
     </Grid>
 
-</controls:BaseListViewControl>
+</UserControl>
