--- a/FaPA/GUI/Design/Templates/UsersGrid.xaml
+++ b/FaPA/GUI/Design/Templates/UsersGrid.xaml
@@ -1,4 +1,4 @@
-﻿<controls:BaseListViewControl  
+﻿<UserControl  
              x:Class="FaPA.GUI.Design.Templates.UsersGrid"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:controls="clr-namespace:FaPA.GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid HorizontalAlignment="Stretch">
@@ -111,4 +110,4 @@
 
     </Grid>
 
-</controls:BaseListViewControl>
+</UserControl>
