--- a/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
+++ b/FaPA/GUI/Design/Templates/DatiDocumentiCorrelati.xaml
@@ -54,14 +54,14 @@
                             <TextBox   Text="{Binding CurrentPoco.NumItem, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
 
-                        <StackPanel Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" Width="25">
+                        <StackPanel Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" >
                             <TextBlock Text="CIG" />
-                            <TextBox   Text="{Binding CurrentPoco.CodiceCig, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
+                            <TextBox   Text="{Binding CurrentPoco.CodiceCIG, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
 
-                        <StackPanel Grid.Row="0" Grid.Column="3" Margin="2,0,2,0" Width="25">
+                        <StackPanel Grid.Row="0" Grid.Column="3" Margin="2,0,2,0" >
                             <TextBlock Text="CUP" />
-                            <TextBox   Text="{Binding CurrentPoco.CodiceCup, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
+                            <TextBox   Text="{Binding CurrentPoco.CodiceCUP, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True}" HorizontalAlignment="Stretch" />
                         </StackPanel>
 
                         <StackPanel Grid.Row="0" Grid.Column="4" Margin="2,0,2,0" MinWidth="25">
