--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -144,6 +144,12 @@
             </StackPanel>
 
             <StackPanel Grid.Row="2" Grid.Column="3"  Margin="2,0,2,0">
+                <TextBlock Text="Prog." />
+                <TextBox   Text="{Binding CurrentEntity.ProgFile, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
+                           HorizontalAlignment="Stretch" MaxLength="6"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="2" Grid.Column="4"  Margin="2,0,2,0">
                 <TextBlock Text="Formato" />
                 <!--TextSearch.TextPath="Description" DisplayMemberPath="Description"-->
                 <ComboBox Tag="EnterAsTab"
@@ -158,7 +164,7 @@
                                                     UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" />
             </StackPanel>
 
-            <StackPanel Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2"  Margin="2,0,2,0">
+            <StackPanel Grid.Row="2" Grid.Column="5" Grid.ColumnSpan="2"  Margin="2,0,2,0">
                 <TextBlock Text="Riferimento Amm." />
                 <TextBox   Text="{Binding CurrentEntity.RiferimentoAmmDB, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=LostFocus, NotifyOnSourceUpdated=True, NotifyOnValidationError=True}" 
                            HorizontalAlignment="Stretch" MaxLength="20" TextWrapping="Wrap"/>
